changed the title tags and added in a p
i changed the title and added in a paragraph to index page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Basic Data Object</title>
+	<title>Conflict example for IMS Fall 2018</title>
 </head>
 <body>
 
-
+	<p>Demonstration how a conflict works when working on a file/project with a team of developers &amp; how to solve this conflict!</p>
 
 	
 	<script src="js/main.js"></script>
