--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 	<p>Demonstration how a conflict works when working on a file/project with a team of developers &amp; how to solve this conflict!</p>
-
+	
+	<h2>Added in a h2</h2>
 	
 	<script src="js/main.js"></script>
 </body>
