--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 	<p>Demonstration how a conflict works when working on a file/project with a team of developers &amp; how to solve this conflict!</p>
 
+	<h3>added in a new heading into html file</h3>
+
 	
 	<script src="js/main.js"></script>
 </body>
